# astrolib

./: .gitignore  AstroLib.kdev4  CMakeLists.txt  README.md
src/: CMakeLists.txt  astrolib-config.in.cmake  astrolib.cpp
src/headers/: CMakeLists.txt  al_global.h  astrolib.h
text/: INFO.txt
